# codex

./: .gitignore  justfile
.github/scripts/: install-musl-build-tools.sh  test_tap_release_linux_workflow.py
.github/workflows/: bazel.yml  rust-ci-full.yml  rust-ci.yml  sdk.yml  tap-release-linux.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server/src/: request_processors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  main.rs  remote_control_cmd.rs
codex-rs/cli/tests/: memory_cli.rs
codex-rs/config/src/: types.rs  types_tests.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: client.rs  exec.rs
codex-rs/exec-server/src/: client.rs  client_transport.rs  remote_file_system.rs  remote_process.rs
codex-rs/exec-server/tests/: exec_process.rs
codex-rs/ext/memories/: Cargo.toml  README.md
codex-rs/ext/memories/src/: codex_memoryd.rs  extension.rs  honcho.rs  import_local.rs  lib.rs  policy.rs  portable_schema.rs  provider.rs  runtime.rs  selected.rs  status.rs  tests.rs
codex-rs/features/src/: lib.rs
codex-rs/rollout/src/: lib.rs
codex-rs/thread-store/: Cargo.toml
codex-rs/thread-store/src/: store.rs  types.rs
codex-rs/tools/: Cargo.toml
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  app_server_session.rs  chatwidget.rs  config_update.rs  config_update_tests.rs  external_agent_config_migration_startup.rs  lib.rs  pager_overlay.rs  (+2 more)
scripts/: build-local-tap-release.sh  local-tap-release.Containerfile  stamp_rust_workspace_version.py
scripts/codex_package/: README.md
(+44 files in other folders)
